<resources>
    <string name="app_name">IkhsanHidayatQuiz1</string>
    <string name="nama">Nama</string>
    <string name="tipe_pelanggan">Tipe Pelanggan :</string>
    <string name="emas">Emas</string>
    <string name="perak">Perak</string>
    <string name="biasa">Biasa</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="kode_barang_lv3_aa5_mp3">Kode Barang (LV3, AA5, MP3)</string>
    <string name="proses">Proses</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="jumlah_detail">Jumlah Barang</string>
    <string name="kode_barang_detail">Kode Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="tipe_member">Tipe Member</string>
    <string name="harga_total">Harga Total</string>
    <string name="diskon_member">Diskon Member</string>
    <string name="harga_diskon">Harga Diskon</string>
    <string name="jumlah_bayar">Jumlah Bayar</string>
    <string name="bagikan">Bagikan</string>
</resources>