<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:textColorHint="@color/black"
            android:id="@+id/et_nama_pelanggan"
            android:hint="@string/nama"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_tipe_pelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipe_pelanggan"
        android:layout_below="@id/edit1"
        android:textSize="16dp"
        android:gravity="center_horizontal"/>

    <RadioGroup

        android:id="@+id/rg_tipe_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_tipe_pelanggan"
        android:layout_margin="16dp">

        <RadioButton
            android:id="@+id/rb_gold"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:text="@string/emas" />

        <RadioButton
            android:id="@+id/rb_silver"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/perak" />

        <RadioButton
            android:id="@+id/rb_biasa"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/biasa" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/rg_tipe_member"
        android:id="@+id/edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:textColorHint="@color/black"
            android:id="@+id/et_jumlah_barang"
            android:text=""
            android:hint="@string/jumlah_barang"
            android:layout_width="match_parent"
            android:layout_below="@id/rg_tipe_member"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/edit2"
        android:id="@+id/edit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:textColorHint="@color/black"
            android:text=""
            android:id="@+id/et_kode_barang"
            android:hint="@string/kode_barang_lv3_aa5_mp3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_jumlah_barang"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_proses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proses"
        android:layout_below="@id/edit3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

</RelativeLayout>